# esp32fdm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
docs/: index.html  manifest.json
janus_proxy/: config.py  janus_manager.py  proxy.py  signaling.py  stream_worker.py
main/: CMakeLists.txt  Kconfig.projbuild  bedlevel.c  bedlevel.h  cache.c  cache.h  camera.c  camera.h  dns_server.c  dns_server.h  gcode_scan.c  gcode_scan.h  host_print.c  host_print.h  httpd.c  httpd.h  idf_component.yml  layout.h  logbuf.c  logbuf.h  main.c  marlin_proto.h  mdns_service.c  mdns_service.h  obico_client.c  obico_client.h  ota.c  ota.h  printer_backend.h  printer_comm.c  printer_comm.h  printer_comm_klipper.c  printer_comm_klipper.h  rfc2217.c  rfc2217.h  sdcard.c  sdcard.h  sdcard_httpd.c  sdcard_httpd.h  terminal.c  (+7 more)
